added forgot Password and reset password APIs
