# src/controllers/authController.js
@@ -1,11 +1,12 @@
 import { User } from "../models/UserModels.js";
 import bcrypt from "bcryptjs";
 import jwt from 'jsonwebtoken';
+import { sendPasswordResetLink } from "../services/emailServices.js";
 
-export const generateJwtToken = (id) => {
+export const generateJwtToken = (id, expiresIn) => {
     return jwt.sign(
         { userID: id }, process.env.JWT_SECRET,
-        { expiresIn: process.env.JWT_EXPIRATION })
+        { expiresIn: expiresIn || process.env.JWT_EXPIRATION })
 }
 
 export const login = async (req, res) => {
@@ -42,4 +43,46 @@ export const login = async (req, res) => {
 export const logout = async (req, res) => {
     res.clearCookie("jwtToken");
     res.status(200).json({ message: "Logout successful" });
+}
+
+export const forgotPassword = async (req, res) => {
+    const { email } = req.body;
+    try {
+        const user = await User.findOne({ where: { email } });
+        if (!user) {
+            return res.status(404).json({ message: "User not found" });
+        }
+    
+        const token = generateJwtToken(user.id, "10m");
+
+        try {
+            await sendPasswordResetLink(email, token);
+        } catch (error) {
+            return res.status(500).json({ message: 'Email not sent, Please try again later', error });
+        }
+    
+        return res.status(200).json({ message: "Password reset link has been sent to your mail" });
+    } catch (error) {
+        return res.status(500).json({ message: error.message });
+    }
+}
+
+export const resetPassword = async (req, res) => {
+    const { token } = req.params;
+    const { password, confirmPassword } = req.body;
+
+    try {
+        const decoded = jwt.verify(token, process.env.JWT_SECRET);
+        const userId = decoded.userID;
+    
+        const user = await User.findOne({ where: { id: userId } });
+        user.password = bcrypt.hashSync(password, 10);
+        await user.save();
+    
+        return res.status(200).json({ message: "Password reset successful" });
+    
+    } catch (error) {
+        return res.status(400).json({ message: "Invalid or expired token", error });
+        
+    }
 }
